plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.107'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories.clear()
repositories {
    // Mirror Maven
    maven {
        url = "https://neoforged.forgecdn.net/releases"
    }
    maven {
        url = "https://neoforged.forgecdn.net/mojang-meta"
    }

    maven {
        url = "https://maven.minecraftforge.net/"
    }
    maven {
        url = "https://libraries.minecraft.net/"
    }

    mavenLocal()

    maven {
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }

    maven {
        url 'https://jitpack.io'
    }

    maven {
        name "KosmX's maven"
        url 'https://maven.kosmx.dev/'
    }

    flatDir {
        dir 'libs'
    }
}

base {
    archivesName = "${mod_file_name}-${minecraft_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            gameDirectory = project.file('run/client')
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            gameDirectory = project.file('run/server')
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            gameDirectory = project.file('run/gametest')
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            gameDirectory = project.file('run/data')
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
            systemProperty 'mixin.debug.export', 'true'
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "maven.modrinth:slashblade-resharped:${slash_blade_version}"
//    implementation 'com.github.0999312:SlashBlade_Resharped:1.21.1-SNAPSHOT'
    // mrqx`s Slashblade Core
//    modImplementation "maven.modrinth:2zhQmVfn:${mrqx_slash_blade_core_version}"
    implementation "blank:mrqxs_Slashblade_Core-${minecraft_version}:${mrqx_slash_blade_core_version}"
    implementation "dev.kosmx.player-anim:player-animation-lib-forge:${player_animation_version}"
    implementation "maven.modrinth:true-power:${true_power_version}"

    // Touhou Little Maid
    implementation "maven.modrinth:touhou-little-maid:${maid_version}-neoforge+mc${minecraft_version}"
    compileOnlyApi "maven.modrinth:simplebedrockmodel:1.4.0-neoforge+mc1.21.1"

    // For test
    runtimeOnly "maven.modrinth:moonlight:UG29KBvQ"
    runtimeOnly "maven.modrinth:mmmmmmmmmmmm:1.21-2.0.12-neoforge"

    implementation "org.jetbrains:annotations:17.0.0"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version                  : minecraft_version,
            minecraft_version_range            : minecraft_version_range,
            neo_version                        : neo_version,
            loader_version_range               : loader_version_range,
            mod_id                             : mod_id,
            mod_name                           : mod_name,
            mod_license                        : mod_license,
            mod_version                        : mod_version,
            mod_authors                        : mod_authors,
            mod_description                    : mod_description,
            mod_file_name                      : mod_file_name,
            slash_blade_version                : slash_blade_version,
            slash_blade_version_range          : slash_blade_version_range,
            mrqx_slash_blade_core_version      : mrqx_slash_blade_core_version,
            mrqx_slash_blade_core_version_range: mrqx_slash_blade_core_version_range,
            true_power_version                 : true_power_version,
            true_power_version_range           : true_power_version_range,
            maid_version                       : maid_version,
            maid_version_range                 : maid_version_range,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
